# flac-io

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  renovate.json
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: smoke.rs
src/: bitstream.rs  bitwriter.rs  crc.rs  decoder.rs  encoder.rs  error.rs  frame.rs  lib.rs  md5.rs  metadata.rs  ogg.rs  sample_bytes.rs
tests/: adversarial.rs  corner_cases.rs  decode_fixtures.rs  edge_cases.rs  extreme.rs  ogg.rs  properties.rs  real_world.rs  roundtrip.rs  security.rs
tests/fixtures/: ATTRIBUTION.md  ch3.flac  ch6_51.flac  ch8_71.flac  jazz_24_48.flac  mono8.flac  realmusic_16_44.flac  realmusic_16_44.oga  realmusic_24_96.flac  realmusic_32_96.flac  stereo16.flac  stereo16_bs256.flac  stereo16_meta.flac  stereo16_minimal.flac  stereo24.flac  stereo24_192k.flac  wtc_piano_24_96.flac
